--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -14,7 +14,7 @@
 <% } else { %>    
 	<h1>Hello Stranger</h1>
 <% } %>
-	<p>This is your landing page.</p>
 	</div>
+	<div class="row"><a href="/logout">Logout</a></div>
 </body>
 </html>
